# industrial_equipment_monitoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
src/industrial_equipment_monitoring/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/industrial_equipment_monitoring/pipelines/data_processing/: nodes.py  pipeline.py
src/industrial_equipment_monitoring/pipelines/model_training/: get_xgb_params.py  nodes.py  optimize.py  pipeline.py
src/industrial_equipment_monitoring/pipelines/reporting/: nodes.py  pipeline.py
src/industrial_equipment_monitoring/pipelines/reporting/functions/: create_plots.py  plots.py  prediction.py
src/industrial_equipment_monitoring/pipelines/reporting/functions/plots_functions/: confusion_matrix.py  feature_importance.py  precision_recall.py  roc_curve.py  threshold_analysis.py
src/industrial_equipment_monitoring/utils/: get_root_path.py  logging_config.py
tests/: test_logger.py
tests/pipelines/data_processing/: test_pipeline.py
