[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "industrial_equipment_monitoring"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "appdirs==1.4.4",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "binaryornot==0.4.4",
    "build==1.3.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "cookiecutter==2.6.0",
    "coverage==7.11.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "dynaconf==3.2.12",
    "executing==2.2.1",
    "fastapi==0.121.3",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kedro==1.0.0",
    "kedro-datasets==9.0.0",
    "kedro-telemetry==0.6.5",
    "kedro-viz==12.2.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "narwhals==2.12.0",
    "networkx==3.5",
    "numpy==2.3.5",
    "omegaconf==2.3.0",
    "optuna==4.6.0",
    "optuna-integration==4.6.0",
    "orjson==3.11.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "parse==1.20.2",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pillow==12.0.0",
    "plotly==6.5.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyproject-hooks==1.2.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "ruff==0.14.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "secure==1.0.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tomli-w==1.2.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "xgboost==3.1.2",
    "zipp==3.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]

[project.scripts]
industrial-equipment-monitoring = "industrial_equipment_monitoring.__main__:main"

[tool.kedro]
package_name = "industrial_equipment_monitoring"
project_name = "industrial_equipment_monitoring"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--cov=src/industrial_equipment_monitoring",
    "--cov-report=term-missing",
    "-ra",
    "--verbose",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/industrial_equipment_monitoring"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/setup.py",
    "*/conftest.py"
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\b:"
]

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage Report - Industrial Equipment Monitoring"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[tool.setuptools.dynamic.version]
attr = "industrial_equipment_monitoring.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "9ed0f1138123482eaea3c2445c998515"
